Move biome bombs to utilize persistant data containers everywhere